desktop layout essentially complete

--- a/index.html
+++ b/index.html
@@ -50,28 +50,37 @@
                 </ul>
             </nav>
         </section>
-        <section class="work body-content hide" id="work">
-            <h2>My work</h2>
+        <section class="work body-content hide container" id="work">
+            <h2 class="section-header">My work</h2>
             <section class="project">
-                <h3>Frobnicator</h3>
-                <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=1"
-                    alt="Frobnicator screenshot">
-                <p class="project-description">
-                    A frob which allows you to frobnicate other frobs.
-                </p>
-                <ul class="project-stack">
-                    <li class="project-stack-item">
-                        React
-                    </li>
-                    <li class="project-stack-item">
-                        Redux
-                    </li>
-                    <li class="project-stack-item">
-                        Node.js
-                    </li>
-                </ul>
+                <h3 class="project-title">Frobnicator</h3>
+                <div class="project-holder">
+                    <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=1"
+                        alt="Frobnicator screenshot">
+                    <div class="project-info">
+                        <p class="project-description">
+                            A frob which allows you to frobnicate other frobs.
+                        </p>
+                        <div class="stack-holder">
+                            <span class="made-with">made with</span>
+                            <ul class="project-stack container">
+                                <li class="project-stack-item">
+                                    React
+                                </li>
+                                <li class="project-stack-item">
+                                    Redux
+                                </li>
+                                <li class="project-stack-item">
+                                    Node.js
+                                </li>
+                                <li class="project-stack-item">
+                                    and a little bit of <img class="love" src="./images/love.png">
+                            </ul>
+                        </div>
+                    </div>
+                </div>
                 <nav class="project-links">
-                    <ul>
+                    <ul class="container">
                         <li class="project-link project-link-live">
                             <a href="#">Live demo</a>
                         </li>
@@ -82,25 +91,34 @@
                 </nav>
             </section>
             <section class="project">
-                <h3>FooBar</h3>
-                <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=2"
-                    alt="FooBar screenshot">
-                <p class="project-description">
-                    A foo which allows you to bar other bazes.
-                </p>
-                <ul class="project-stack">
-                    <li class="project-stack-item">
-                        React
-                    </li>
-                    <li class="project-stack-item">
-                        Redux
-                    </li>
-                    <li class="project-stack-item">
-                        Node.js
-                    </li>
-                </ul>
+                <h3 class="project-title">FooBar</h3>
+                <div class="project-holder">
+                    <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=2"
+                        alt="FooBar screenshot">
+                    <div class="project-info">
+                        <p class="project-description">
+                            A foo which allows you to bar other bazes.
+                        </p>
+                        <div class="stack-holder">
+                            <span class="made-with">made with</span>
+                            <ul class="project-stack container">
+                                <li class="project-stack-item">
+                                    React
+                                </li>
+                                <li class="project-stack-item">
+                                    Redux
+                                </li>
+                                <li class="project-stack-item">
+                                    Node.js
+                                </li>
+                                <li class="project-stack-item">
+                                    and a little bit of <img class="love" src="./images/love.png">
+                            </ul>
+                        </div>
+                    </div>
+                </div>
                 <nav class="project-links">
-                    <ul>
+                    <ul class="container">
                         <li class="project-link project-link-live">
                             <a href="#">Live demo</a>
                         </li>
@@ -111,25 +129,34 @@
                 </nav>
             </section>
             <section class="project">
-                <h3>AliceBob</h3>
-                <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=3"
-                    alt="AliceBob screenshot">
-                <p class="project-description">
-                    An Alice which allows you to Bob other Eves.
-                </p>
-                <ul class="project-stack">
-                    <li class="project-stack-item">
-                        React
-                    </li>
-                    <li class="project-stack-item">
-                        Redux
-                    </li>
-                    <li class="project-stack-item">
-                        Node.js
-                    </li>
-                </ul>
+                <h3 class="project-title">AliceBob</h3>
+                <div class="project-holder">
+                    <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=3"
+                        alt="AliceBob screenshot">
+                    <div class="project-info">
+                        <p class="project-description">
+                            An Alice that allows you to Bob other Eves.
+                        </p>
+                        <div class="stack-holder">
+                            <span class="made-with">made with</span>
+                            <ul class="project-stack container">
+                                <li class="project-stack-item">
+                                    React
+                                </li>
+                                <li class="project-stack-item">
+                                    Redux
+                                </li>
+                                <li class="project-stack-item">
+                                    Node.js
+                                </li>
+                                <li class="project-stack-item">
+                                    and a little bit of <img class="love" src="./images/love.png">
+                            </ul>
+                        </div>
+                    </div>
+                </div>
                 <nav class="project-links">
-                    <ul>
+                    <ul class="container">
                         <li class="project-link project-link-live">
                             <a href="#">Live demo</a>
                         </li>
@@ -140,25 +167,34 @@
                 </nav>
             </section>
             <section class="project">
-                <h3>Wibble</h3>
-                <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=4"
-                    alt="Wibble screenshot">
-                <p class="project-description">
-                    A wibble which allows you to wobble other wubbles.
-                </p>
-                <ul class="project-stack">
-                    <li class="project-stack-item">
-                        React
-                    </li>
-                    <li class="project-stack-item">
-                        Redux
-                    </li>
-                    <li class="project-stack-item">
-                        Node.js
-                    </li>
-                </ul>
+                <h3 class="project-title">Wibble</h3>
+                <div class="project-holder">
+                    <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=4"
+                        alt="Wibble screenshot">
+                    <div class="project-info">
+                        <p class="project-description">
+                            A wibble that allows you to wobble other wubbles.
+                        </p>
+                        <div class="stack-holder">
+                            <span class="made-with">made with</span>
+                            <ul class="project-stack container">
+                                <li class="project-stack-item">
+                                    React
+                                </li>
+                                <li class="project-stack-item">
+                                    Redux
+                                </li>
+                                <li class="project-stack-item">
+                                    Node.js
+                                </li>
+                                <li class="project-stack-item">
+                                    and a little bit of <img class="love" src="./images/love.png">
+                            </ul>
+                        </div>
+                    </div>
+                </div>
                 <nav class="project-links">
-                    <ul>
+                    <ul class="container">
                         <li class="project-link project-link-live">
                             <a href="#">Live demo</a>
                         </li>
@@ -170,16 +206,26 @@
             </section>
         </section>
         <section class="contact body-content hide" id="contact">
-            <h2>Contact me</h2>
+            <h2 class="section-header">Contact me</h2>
             <form action="https://formspree.io/jrandomhacker@example.com"
                   method="POST">
-                <label for="contact-form-name">Your Name</label>
-                <input type="text" name="name" id="contact-form-name" placeholder="Grace Hopper">
-                <label for="contact-form-email">Your Email Address</label>
-                <input type="email" name="_replyto" id="contact-form-email" placeholder="grace@example.com">
-                <label for="contact-form-message">Message</label>
-                <textarea name="message" id="contact-form-message"></textarea>
-                <input type="submit" value="Send message">
+                <div class="row-1">
+                    <div class="form name-input">
+                        <label for="contact-form-name">Your Name</label>
+                        <input type="text" name="name" id="contact-form-name" placeholder="Grace Hopper">
+                    </div>
+                    <div class="form email-input">
+                        <label for="contact-form-email">Your Email Address</label>
+                        <input type="email" name="_replyto" id="contact-form-email" placeholder="grace@example.com">
+                    </div>
+                </div>
+                <div class="form message-input">
+                    <label for="contact-form-message">Message</label>
+                    <textarea name="message" id="contact-form-message" placeholder="Describe your project here..."></textarea>
+                </div>
+                <div class="form submit-button">
+                    <input type="submit" value="Send message">
+                </div>
             </form> 
         </section>
     </body>
